# matrix-hub

./: -  .docker-supervisord.conf  .dockerignore  .env.example  .env.example.local  .env.gateway.example  .env.prod  .env.production.example  .gitignore  404.html  Dockerfile  Dockerfile copy  Dockerfile.prod  LICENSE  Makefile  NOTICE  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yaml  docker-entrypoint.sh  index.html  matrix.lock.json  mkdocs.yml  pyproject.toml  pytest.ini  setup-mcp-gateway.md   sitemap.xml  supervisord.conf
agent-installation/: index.html
agent-registration/: index.html
agents/: index.html
alembic/: env.py  script.py.mako
api/: index.html
architecture/: index.html
blob-storage/: index.html
changelog/: index.html
chunking/: index.html
configuration/: index.html
deployment/: index.html
development/: index.html
docs/: SCHEMA_OPS.md  TODO.md  agent-installation.md  agent-registration.md  agents.md  api.md  architecture.md  blob-storage.md  changelog.md  chunking.md  configuration.md  container.md  deployment.md  development.md  embedding.md  faq.md  index.md  indexing-architecture.md  ingestion.md  ingestion_local.md  ingestors.md  install-and-registration.md  manifests.md  mcp-gateway.md  normalization.md  observability.md  querying-architecture.md  querying.md  quickstart.md  sdk.md  search-diagram.md  search.md  security.md  setup-mcp-gateway.md  update.md  vector-indexing.md  verify-mcp-gateway.md
embedding/: index.html
examples/: EXAMPLE.md  README.md  add_hello-sse-server.sh  add_mcp_server.sh  index.json  ingest_local_index.sh  install_watsonx_local.sh  register_watsonx_local.sh  register_watsonx_local_via_gateway.sh  register_watsonx_local_via_hub.sh  (+6 more)
faq/: index.html
(+190 files in other folders)
